correctness leftovers
